--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,7 +1,26 @@
-body {
-    background-color: whitesmoke;
-}
-
 #app {
     margin-top: 5%;
+}
+
+.main {
+    background-color: white;
+    padding: 20px;
+    float: left;
+    position: relative;
+}
+
+.row {
+    height: 100vh;
+}
+
+.sidebar {
+    background-color: #e5e5e5;
+    display: block;
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
